# nemesis

./: Cargo.toml  README.md  build.rs
benches/: gen_compare.rs  gen_id.rs  gen_id_by_entities.rs  gen_id_shares.rs  gen_id_shuffle.rs  gen_mac.rs  gen_recv_msg.rs  msp_compare.rs  seek_source.rs  shuffle_id.rs  update_msp.rs  verify_mac.rs  verify_msg.rs
doc/: eval.md  eval_send.md
proto/: eems.proto  user.proto
src/: crypto.rs  db.rs  eems.rs  lib.rs  msp.rs  user.rs  utils.rs
