[package]
name = "eemod"
version = "0.1.0"
edition = "2021"
authors = ["myl7 <myl@myl.moe>"]
# description = ""
documentation = "https://github.com/myl7/eemod#readme"
homepage = "https://github.com/myl7/eemod"
repository = "https://github.com/myl7/eemod.git"
# license = ""
keywords = ["moderation", "e2ee", "threshold-report", "tracing"]
# categories = []

[dependencies]
aes-gcm = "0.10.2"
anyhow = "1.0.75"
async-trait = "0.1.73"
dcf = { version = "0.3.0", features = ["prg"] }
double-ratchet = "0.1.0"
double-ratchet-signal = { git = "https://github.com/myl7/double-ratchet-signal.git", version = "0.1.2" }
dpf-fss = { version = "0.1.0", features = ["prg"] }
group-math = { version = "0.1.0", features = ["int"] }
hex = "0.4.3"
num-bigint = "0.4.4"
prost = "0.12.1"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
rand_os = "0.1"
ring-compat = "0.7.0"
rocksdb = { version = "0.21.0", default-features = false }
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.10.0"
uuid = "1.4.1"

[[bench]]
name = "gen_id"
harness = false

[[bench]]
name = "gen_id_by_entities"
harness = false

[[bench]]
name = "verify_msg"
harness = false

[[bench]]
name = "shuffle_id"
harness = false

[[bench]]
name = "gen_id_shares"
harness = false

[[bench]]
name = "gen_id_shuffle"
harness = false

[build-dependencies]
tonic-build = "0.10.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
